src/dnsmasq.h

#  define _(S) (S)
#  define _(S) gettext(S)
struct all_addr {
    union {
        struct in_addr addr4;
#ifdef HAVE_IPV6
        struct in6_addr addr6;
#endif
        /* for log_query */
        struct {
            uint16_t keytag, algo, digest;
        } log;
        /* for log_query */
        struct {
            uint32_t rcode;
        } rcode;
        /* for cache_insert of DNSKEY, DS */
        struct {
            uint16_t _class, type;
        } dnssec;
    } addr;
};
struct ptr_record {
    char* name, * ptr;
    struct ptr_record* next;
};
struct cname {
    int ttl, flag;
    char* alias, * target;
    struct cname* next, * targetp;
};
struct addrlist {
    struct all_addr addr;
    int flags, prefixlen;
    struct addrlist* next;
};
struct auth_zone {
    char* domain;
    struct auth_name_list {
        char* name;
        int flags;
        struct auth_name_list* next;
    } * interface_names;
    struct addrlist* subnet;
    struct addrlist* exclude;
    struct auth_zone* next;
};
struct interface_name {
    char* name; /* domain name */
    char* intr; /* interface name */
    int family; /* AF_INET, AF_INET6 or zero for both */
    struct addrlist* addr;
    struct interface_name* next;
};
union bigname {
    char name[MAXDNAME];
    union bigname* next; /* freelist */
};
struct blockdata {
    struct blockdata* next;
    unsigned char key[KEYBLOCK_LEN];
};
struct crec {
    struct crec* hash_next;
    struct crec* prev;
    struct crec* next;
    /* union is 16 bytes when doing IPv6, 8 bytes on 32 bit machines without IPv6 */
    union {
        struct all_addr addr;
        struct {
            union {
                struct crec* cache;
                struct interface_name* int_name;
            } target;
            uint32_t uid; /* 0 if union is interface-name */
        } cname;
        struct {
            struct blockdata* keydata;
            uint16_t keylen, flags, keytag;
            unsigned char algo;
        } key;
        struct {
            struct blockdata* keydata;
            uint16_t keylen, keytag;
            unsigned char algo;
            unsigned char digest;
        } ds;
    } addr;
    time_t ttd; /* time to die */
    /* used as class if DNSKEY/DS, index to source for F_HOSTS */
    uint32_t uid;
    uint16_t flags;
    union {
        char sname[SMALLDNAME];
        union bigname* bname;
        char* namep;
    } name;
};
/* struct sockaddr is not large enough to hold any address,
   and specifically not big enough to hold an IPv6 address.
   Blech. Roll our own. */
union mysockaddr {
    struct sockaddr sa;
    struct sockaddr_in in;
#if defined(HAVE_IPV6)
    struct sockaddr_in6 in6;
#endif
};
struct randfd {
    int fd;
    uint16_t refcount, family;
};
struct dhcp_netid {
    char* net;
    struct dhcp_netid* next;
};
struct dhcp_netid_list {
    struct dhcp_netid* list;
    struct dhcp_netid_list* next;
};
struct tag_if {
    struct dhcp_netid_list* set;
    struct dhcp_netid* tag;
    struct tag_if* next;
};
struct delay_config {
    int delay;
    struct dhcp_netid* netid;
    struct delay_config* next;
};
struct hwaddr_config {
    int hwaddr_len, hwaddr_type;
    unsigned char hwaddr[DHCP_CHADDR_MAX];
    uint32_t wildcard_mask;
    struct hwaddr_config* next;
};
struct dhcp_config {
    uint32_t flags;
    int clid_len;          /* length of client identifier */
    unsigned char* clid;   /* clientid */
    char* hostname, * domain;
    struct dhcp_netid_list* netid;
#ifdef HAVE_DHCP6
    struct in6_addr addr6;
#endif
    struct in_addr addr;
    time_t decline_time;
    uint32_t lease_time;
    struct hwaddr_config* hwaddr;
    struct dhcp_config* next;
};
struct dhcp_mac {
    uint32_t mask;
    int hwaddr_len, hwaddr_type;
    unsigned char hwaddr[DHCP_CHADDR_MAX];
    struct dhcp_netid netid;
    struct dhcp_mac* next;
};
struct dhcp_bridge {
    std::string iface;
    struct dhcp_bridge* alias, * next;
};
struct cond_domain {
    char* domain, * prefix;
    struct in_addr start, end;
#ifdef HAVE_IPV6
    struct in6_addr start6, end6;
#endif
    int is6, indexed;
    struct cond_domain* next;
};
struct ra_interface {
    char* name;
    char* mtu_name;
    int interval, lifetime, prio, mtu;
    struct ra_interface* next;
};
uint16_t rand16(void);
void* safe_malloc(size_t size);
void safe_strncpy(char* dest, const char* src, size_t size);
int sa_len(union mysockaddr* addr);
int retry_send(ssize_t rc);
int expand_buf(struct iovec* iov, size_t size);
/* log.c */
void die(char* message, char* arg1, int exit_code) ATTRIBUTE_NORETURN;
struct randfd* allocate_rfd(int family);
void free_rfd(struct randfd* rfd);
void check_servers(void);
void queue_event(int event);
void send_event(int fd, int event, int data, char* msg);
int poll_check(int fd, short event);
void poll_listen(int fd, short event);