src/slack.rs

#[derive(Copy, Clone)]
#[repr(C)]
pub struct C2RustUnnamed_198 {
    pub keytag: u16,
    pub algo: u16,
    pub digest: u16,
    pub rcode: u16,
}
#[derive(Copy, Clone)]
#[repr(C)]
pub struct C2RustUnnamed_298 {
    pub target: &mut blockdata,
    pub targetlen: u16,
    pub srvport: u16,
    pub priority: u16,
    pub weight: u16,
}
#[derive(Copy, Clone)]
#[repr(C)]
pub struct blockdata {
    pub next: &mut blockdata,
    pub key: [libc::c_uchar; 40],
}




#[derive(Copy, Clone)]
#[repr(C)]
pub struct crec99 {
    pub next: &mut crec,
    pub prev: &mut crec,
    pub hash_next: &mut crec,
    pub addr: all_addr,
    pub ttd: time::Instant,
    pub uid: u32,
    pub flags: u32,
    pub name: C2RustUnnamed_7,
}










#[derive(Copy, Clone)]
#[repr(C)]
pub struct auth_zone {
    pub domain: &mut String,
    pub interface_names: &mut auth_name_list,
    pub subnet: &mut addrlist,
    pub exclude: &mut addrlist,
    pub next: &mut auth_zone,
}
























#[derive(Copy, Clone)]
#[repr(C)]
pub struct dhcp_config {
    pub flags: u32,
    pub clid_len: i32,
    pub clid: mut Vec<u8>,
    pub hostname: &mut String,
    pub domain: &mut String,
    pub netid: &mut dhcp_netid_list,
    pub filter: &mut dhcp_netid,
    pub addr6: &mut addrlist,
    pub addr: in_addr,
    pub decline_time: time::Instant,
    pub lease_time: u32,
    pub hwaddr: &mut hwaddr_config,
    pub next: &mut dhcp_config,
}










#[derive(Copy, Clone)]
#[repr(C)]
pub struct ra_interface {
    pub name: &mut String,
    pub mtu_name: &mut String,
    pub interval: i32,
    pub lifetime: i32,
    pub prio: i32,
    pub mtu: i32,
    pub next: &mut ra_interface,
}

extern "C" {




    #[no_mangle]
    static mut stderr: FILE;
    #[no_mangle]
    fn fprintf(_: &mut FILE, _: *const libc::c_char, _: ...) -> i32;


    #[no_mangle]
    fn vsnprintf(_: &mut String, _: u32,
                 _: *const libc::c_char, _: ::std::ffi::VaList)
                 -> i32;

    #[no_mangle]
    fn fputc(__c: i32, __stream:  &mut FILE)  -> i32;


    #[no_mangle]
    fn socket(__domain: i32, __type: i32,
              __protocol: i32) -> i32;
    #[no_mangle]
    fn connect(__fd: i32, __addr: __CONST_NetAddress_ARG,
               __len: socklen_t) -> i32;




    #[no_mangle]
    fn strerror(_: i32) -> &mut String;
    #[no_mangle]
    fn close(__fd: i32) -> i32;
    #[no_mangle]
    fn write(__fd: i32, __buf: *const libc::c_void, __n: usize)
             -> ssize_t;
    #[no_mangle]
    fn fchown(__fd: i32, __owner: __uid_t, __group: __gid_t)
              -> i32;
    #[no_mangle]
    fn dup(__fd: i32) -> i32;
    #[no_mangle]
    fn _exit(_: i32) -> !;
    #[no_mangle]
    fn getpid() -> __pid_t;





    #[no_mangle]
    fn malloc(_: u32) ->Vec<u8>;
    #[no_mangle]
    fn exit(_: i32) -> !;
    #[no_mangle]
    fn fcntl(__fd: i32, __cmd: i32, _: ...) -> i32;
    #[no_mangle]
    fn open(__file: *const libc::c_char, __oflag: i32, _: ...)
            -> i32;


    #[no_mangle]
    fn time(__timer: &mut time::Instant) -> time::Instant;
    #[no_mangle]
    fn ctime(__timer: *const time::Instant) -> &mut String;
    #[no_mangle]
    fn nanosleep(__requested_time: *const timespec,
                 __remaining:  &mut timespec)  -> i32;
    #[no_mangle]
    fn __errno_location() -> ;




    #[no_mangle]
    fn openlog(__ident: *const libc::c_char, __option: i32,
               __facility: i32);
    #[no_mangle]
    fn vsyslog(__pri: i32, __fmt: *const libc::c_char,
               __ap: ::std::ffi::VaList);

    #[no_mangle]
    fn safe_malloc(size: usize) ->Vec<u8>;
    #[no_mangle]
    fn safe_strncpy(dest: &mut String, src: *const libc::c_char,
                    size: usize);
    #[no_mangle]
    fn send_event(fd: i32, event: i32, data: i32,
                  msg: &mut String);
    #[no_mangle]
    fn poll_listen(fd: i32, event: libc::c_short);
    #[no_mangle]
    fn poll_check(fd: i32, event: libc::c_short) -> i32;
}




























#[derive(Copy, Clone)]
#[repr(C)]
pub struct passwd {
    pub pw_name: &mut String,
    pub pw_passwd: &mut String,
    pub pw_uid: __uid_t,
    pub pw_gid: __gid_t,
    pub pw_gecos: &mut String,
    pub pw_dir: &mut String,
    pub pw_shell: &mut String,
}



#[derive(Copy, Clone)]
#[repr(C)]
pub struct C2RustUnnamed_197 {
    pub target: &mut blockdata,
    pub targetlen: u16,
    pub srvport: u16,
    pub priority: u16,
    pub weight: u16,
}


#[derive(Copy, Clone)]
#[repr(C)]
pub struct C2RustUnnamed_398 {
    pub keydata: &mut blockdata,
    pub keylen: u16,
    pub flags: u16,
    pub keytag: u16,
    pub algo: libc::c_uchar,
}












#[derive(Copy, Clone)]
#[repr(C)]
pub struct addrlist {
    pub addr: all_addr,
    pub flags: i32,
    pub prefixlen: i32,
    pub decline_time: time::Instant,
    pub next: &mut addrlist,
}






















#[derive(Copy, Clone)]
#[repr(C)]
pub struct hwaddr_config {
    pub hwaddr_len: i32,
    pub hwaddr_type: i32,
    pub hwaddr: [libc::c_uchar; 16],
    pub wildcard_mask: u32,
    pub next: &mut hwaddr_config,
}










#[derive(Copy, Clone)]
#[repr(C)]
pub struct cond_domain {
    pub domain: &mut String,
    pub prefix: &mut String,
    pub start: in_addr,
    pub end: in_addr,
    pub start6: in6_addr,
    pub end6: in6_addr,
    pub is6: i32,
    pub indexed: i32,
    pub next: &mut cond_domain,
}










#[derive(Copy, Clone)]
#[repr(C)]
pub struct log_entry {
    pub offset: i32,
    pub length: i32,
    pub pid: pid_t,
    pub next: &mut log_entry,
    pub payload: [libc::c_char; 1024],
}

extern "C" {








    #[no_mangle]
    fn sendto(__fd: i32, __buf: *const libc::c_void, __n: usize,
              __flags: i32, __addr: __CONST_NetAddress_ARG,
              __addr_len: socklen_t) -> ssize_t;




    #[no_mangle]
    fn strstr(_: *const libc::c_char, _: *const libc::c_char)
              -> &mut String;







    #[no_mangle]
    fn __ctype_b_loc() -> u16;







    #[no_mangle]
    fn rand16() -> u16;
    #[no_mangle]
    fn sa_len(addr: NetAddress) -> i32;
    #[no_mangle]
    fn retry_send(rc: ssize_t) -> i32;
    #[no_mangle]
    fn allocate_rfd(family: i32) -> randfd;
    #[no_mangle]
    fn free_rfd(rfd:  &mut randfd) ;
    #[no_mangle]
    fn check_servers();
}























//pub const _ISPUNCT: C2RustUnnamed_0 = 4;








#[derive(Copy, Clone)]
#[repr(C)]
pub union C2RustUnnamed_698 {
    pub cache: &mut crec,
    pub name: &mut String,
}









#[derive(Copy, Clone)]
#[repr(C)]
pub struct cname {
    pub ttl: i32,
    pub flag: i32,
    pub alias: &mut String,
    pub target: &mut String,
    pub next: &mut cname,
    pub targetp: &mut cname,
}






















#[derive(Copy, Clone)]
#[repr(C)]
pub struct delay_config {
    pub delay: i32,
    pub netid: &mut dhcp_netid,
    pub next: &mut delay_config,
}










#[derive(Copy, Clone)]
#[repr(C)]
pub struct dhcp_bridge {
    pub iface: [libc::c_char; 16],
    pub alias: &mut dhcp_bridge,
    pub next: &mut dhcp_bridge,
}



#[inline]
unsafe extern "C" fn putchar_unlocked(mut __c: i32) -> i32 {
    return if (stdout._IO_write_ptr >= stdout._IO_write_end)  libc::c_int != 0 {
        __overflow(stdout, __c)
    } else {
        let fresh5 = stdout._IO_write_ptr;
        stdout._IO_write_ptr = stdout._IO_write_ptr.offset(1);
        *fresh5 = __c;
        *fresh5
    };
}



extern "C" {
    pub type NetAddress_x25;
    pub type NetAddress_ns;
    pub type NetAddress_iso;
    pub type NetAddress_ipx;
    pub type NetAddress_inarp;
    pub type NetAddress_eon;
    pub type NetAddress_dl;
    pub type NetAddress_ax25;
    pub type NetAddress_at;



    #[no_mangle]
    fn socket(__domain: i32, __type: i32,
              __protocol: i32) -> i32;
    #[no_mangle]
    fn bind(__fd: i32, __addr: __CONST_NetAddress_ARG, __len: socklen_t)
            -> i32;
    #[no_mangle]
    fn getsockname(__fd: i32, __addr: __NetAddress_ARG,
                   __len:  &mut socklen_t)  -> i32;
    #[no_mangle]
    fn sendto(__fd: i32, __buf: *const libc::c_void, __n: usize,
              __flags: i32, __addr: __CONST_NetAddress_ARG,
              __addr_len: socklen_t) -> ssize_t;
    #[no_mangle]
    fn recvmsg(__fd: i32, __message: &mut msghdr,
               __flags: i32) -> ssize_t;
    #[no_mangle]
    fn setsockopt(__fd: i32, __level: i32,
                  __optname: i32, __optval: *const libc::c_void,
                  __optlen: socklen_t) -> i32;



    #[no_mangle]
    fn memset(_:Vec<u8>, _: i32, _: u32)
              ->Vec<u8>;
    #[no_mangle]
    fn strerror(_: i32) -> &mut String;
    #[no_mangle]
    fn sleep(__seconds: u32) -> libc::c_uint;









    #[no_mangle]
    fn fcntl(__fd: i32, __cmd: i32, _: ...) -> i32;


    #[no_mangle]
    fn __errno_location() -> ;





    #[no_mangle]
    fn safe_malloc(size: usize) ->Vec<u8>;
    #[no_mangle]
    fn retry_send(rc: ssize_t) -> i32;
    #[no_mangle]
    fn expand_buf(iov_0: &mut iovec, size: usize) -> i32;
    #[no_mangle]
    fn die(message: &mut String, arg1: &mut String,
           exit_code: i32) -> !;

    #[no_mangle]
    fn queue_event(event: i32);
}








pub type C2RustUnnamed997 = libc::c_uint;
pub const MSG_CMSG_CLOEXEC: C2RustUnnamed = 1073741824;
pub const MSG_FASTOPEN: C2RustUnnamed = 536870912;
pub const MSG_ZEROCOPY: C2RustUnnamed = 67108864;
pub const MSG_BATCH: C2RustUnnamed = 262144;
pub const MSG_WAITFORONE: C2RustUnnamed = 65536;
pub const MSG_MORE: C2RustUnnamed = 32768;
pub const MSG_NOSIGNAL: C2RustUnnamed = 16384;
pub const MSG_ERRQUEUE: C2RustUnnamed = 8192;
pub const MSG_RST: C2RustUnnamed = 4096;
pub const MSG_CONFIRM: C2RustUnnamed = 2048;
pub const MSG_SYN: C2RustUnnamed = 1024;
pub const MSG_FIN: C2RustUnnamed = 512;
pub const MSG_WAITALL: C2RustUnnamed = 256;
pub const MSG_EOR: C2RustUnnamed = 128;
pub const MSG_DONTWAIT: C2RustUnnamed = 64;
pub const MSG_TRUNC: C2RustUnnamed = 32;
pub const MSG_PROXY: C2RustUnnamed = 16;
pub const MSG_CTRUNC: C2RustUnnamed = 8;
pub const MSG_TRYHARD: C2RustUnnamed = 4;
pub const MSG_DONTROUTE: C2RustUnnamed = 4;
pub const MSG_PEEK: C2RustUnnamed = 2;
pub const MSG_OOB: C2RustUnnamed = 1;






#[derive(Copy, Clone)]
#[repr(C)]
pub struct in6_addr2 {
    pub __in6_u: C2RustUnnamed_0,
}
#[derive(Copy, Clone)]
#[repr(C)]
pub union C2RustUnnamed_02{
    pub __u6_addr8: [uint8_t; 16],
    pub __u6_addr16: [uint16_t; 8],
    pub __u6_addr32: [uint32_t; 4],
}









pub type __u8 = libc::c_uchar;

pub type __s32 = libc::c_int;






















#[derive(Copy, Clone)]
#[repr(C)]
pub struct ptr_record {
    pub name: &mut String,
    pub ptr: &mut String,
    pub next: &mut ptr_record,
}






















#[derive(Copy, Clone)]
#[repr(C)]
pub struct tag_if {
    pub set: &mut dhcp_netid_list,
    pub tag: &mut dhcp_netid,
    pub next: &mut tag_if,
}










#[derive(Copy, Clone)]
#[repr(C)]
pub struct dhcp_mac {
    pub mask: u32,
    pub hwaddr_len: i32,
    pub hwaddr_type: i32,
    pub hwaddr: [libc::c_uchar; 16],
    pub netid: dhcp_netid,
    pub next: &mut dhcp_mac,
}










